# galbot_one_golf_description

./: .gitattributes  .lfsconfig  README.md
source/galbot_one_golf_description/: CMakeLists.txt  create_description.py  galbot_one_golf.srdf  galbot_one_golf.urdf  package.xml
source/galbot_one_golf_description/config/: galbot_one_golf.rviz
source/galbot_one_golf_description/launch/: display.launch  launch_individual_part.launch
source/galbot_one_golf_description/meshes/collision/chassis/omni_chassis_base_link/convex_hull/: omni_chassis_base_link_convex_hull.stl
source/galbot_one_golf_description/metadata/: actuator.json  appendix.xml  default.json  metadata.json
source/galbot_one_golf_description/predefined_description/: galbot_one_golf_sphere.urdf
source/galbot_one_golf_description/scripts/: visualize_urdf.py
source/galbot_one_golf_description/test/: test_galbot_gripper1.xacro  test_galbot_suction_cup1.xacro  test_head.xacro  test_left_arm.xacro  test_leg.xacro  test_omni_chassis.xacro  test_right_arm.xacro  test_torso.xacro
source/galbot_one_golf_description/tools/: left_arm_gripper_hitbot.toml  left_arm_no_tool.toml  left_arm_suction_cup.toml  right_arm_gripper_hitbot.toml  right_arm_no_tool.toml  right_arm_suction_cup.toml
source/galbot_one_golf_description/tools/meshes/: gripper_hitbot_base_link.stl  suction_cup_base_link.stl
source/galbot_one_golf_description/xacro/: galbot_one_golf.xacro
source/galbot_one_golf_description/xacro/camera/d405_camera/: left_wrist_d405_camera.xacro  right_wrist_d405_camera.xacro
source/galbot_one_golf_description/xacro/camera/d415_camera/: left_wrist_d415_camera.xacro  right_wrist_d415_camera.xacro
source/galbot_one_golf_description/xacro/chassis/: omni_chassis.xacro
source/galbot_one_golf_description/xacro/gripper/galbot_gripper1/: galbot_gripper1.xacro
source/galbot_one_golf_description/xacro/gripper/hitbot_gripper/: hitbot_gripper.xacro
source/galbot_one_golf_description/xacro/head/: head.xacro
source/galbot_one_golf_description/xacro/left_arm/: left_arm.xacro
source/galbot_one_golf_description/xacro/leg/: leg.xacro
source/galbot_one_golf_description/xacro/right_arm/: right_arm.xacro
source/galbot_one_golf_description/xacro/suction_cup/galbot_suction_cup1/: galbot_suction_cup1.xacro
source/galbot_one_golf_description/xacro/torso/: torso.xacro
(+504 files in other folders)
