<?xml version="1.0"?>
<package format="2">
  <name>galbot_one_golf_description</name>
  <version>2.2.1</version>
  <description>
    This package provides the robot description files (URDF/XACRO/MJCF) and 3D models for the Galbot
    robot. It includes basic files needed for configuration, visualization, and simulation.
  </description>
  <maintainer email="hermanye233@icloud.com">Herman Ye@Galbot</maintainer>
  <license>Apache License 2.0</license>
  <author email="hermanye233@icloud.com">Herman Ye@Galbot</author>
  <author email="XUJINGHUA03@126.com">Jinghua Xu@Galbot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>rosunit</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>